==> 9zigen/STM32F0/STEPPER/stm32f0xx_stepper.c <==
#include <stm32f0xx_stepper.h>
#include <stdlib.h>

void setSpeed(stepper_struct* current_stepper, uint32_t pulsesPerSecond)
{
  uint32_t period = (1000000 / pulsesPerSecond) / TIM16_INCREMENT_RESOLUTION;
	current_stepper->stepper_speed = period - 1;
	//TIM_SetAutoreload(TIM3, period-1);
}

void step(stepper_struct* current_stepper, int steps_to_move)
{  
  int steps_left = abs(steps_to_move);  // how many steps to take
	 
  // determine direction based on whether steps_to_move is + or -:
  if (steps_to_move > 0) {current_stepper->direction = DIRECTION_CW;}
  if (steps_to_move < 0) {current_stepper->direction = DIRECTION_CCW;}

  // decrement the number of steps, moving one step each time:
  while(steps_left > 0) {			

		// increment or decrement the step number, depending on direction:
		if( current_stepper->direction == DIRECTION_CW) {
			current_stepper->current_step_number++;	// increment overall step number - from home position
			current_stepper->step_number++;
			if( (current_stepper->step_number) == current_stepper->number_of_steps) {
				current_stepper->step_number = 0;
			}
		} 
		else { 
			current_stepper->current_step_number--;	// decrement overall step number - from home position
			if (current_stepper->step_number == 0) {
				current_stepper->step_number = current_stepper->number_of_steps;
			}
			current_stepper->step_number--;
		}
		// decrement the steps left:
		steps_left--;
		
		if (current_stepper->use_half_step)
		{
			// we have 8 steps, next step number will be 0, 1, 2, 3, 4, 5, 6 or 7:// JZ 20091104
			stepMotor(current_stepper, current_stepper->step_number % 8);	// JZ 20091104
		} else {
			// step the motor to step number 0, 1, 2, or 3:
			stepMotor(current_stepper, current_stepper->step_number % 4);
		}
		
		// create step delay
		TIM16_update_flag = 0;
		TIM_SetAutoreload(TIM16, current_stepper->stepper_speed);	//set period
		TIM_SetCounter(TIM16, 0);
		TIM_Cmd(TIM16, ENABLE);
		while(TIM16_update_flag != 1);
		TIM_Cmd(TIM16, DISABLE);
	}	
	if (current_stepper->maintain_position == MAINTAIN_POS){	//add aditional step delay, before pins are reseted
		TIM16_update_flag = 0;
		TIM_SetCounter(TIM16, 0);
		TIM_Cmd(TIM16, ENABLE);
		while(TIM16_update_flag != 1);
		TIM_Cmd(TIM16, DISABLE);
	}
	//reset motor pins
	GPIO_ResetBits(current_stepper->motor_pin_1_bank, current_stepper->motor_pin_1);
	GPIO_ResetBits(current_stepper->motor_pin_2_bank, current_stepper->motor_pin_2);
	if(current_stepper->pin_count == 4){
		GPIO_ResetBits(current_stepper->motor_pin_3_bank, current_stepper->motor_pin_3);
		GPIO_ResetBits(current_stepper->motor_pin_4_bank, current_stepper->motor_pin_4);
	}
	
}

void stepMotor(stepper_struct* current_stepper, int this_step)
{
	if (current_stepper->pin_count == 2) {
    switch (this_step) {
      case 0: /* 01 */
				GPIO_ResetBits(current_stepper->motor_pin_1_bank, current_stepper->motor_pin_1);
				GPIO_SetBits(current_stepper->motor_pin_2_bank, current_stepper->motor_pin_2);
				break;
      case 1: /* 11 */
				GPIO_SetBits(current_stepper->motor_pin_1_bank, current_stepper->motor_pin_1);
				GPIO_SetBits(current_stepper->motor_pin_2_bank, current_stepper->motor_pin_2);
				break;
      case 2: /* 10 */
				GPIO_SetBits(current_stepper->motor_pin_1_bank, current_stepper->motor_pin_1);
				GPIO_ResetBits(current_stepper->motor_pin_2_bank, current_stepper->motor_pin_2);
				break;
      case 3: /* 00 */
				GPIO_ResetBits(current_stepper->motor_pin_1_bank, current_stepper->motor_pin_1);
				GPIO_ResetBits(current_stepper->motor_pin_2_bank, current_stepper->motor_pin_2);
				break;
    } 
  }
  if ((current_stepper->pin_count == 4) && (current_stepper->use_half_step == 0)) {
    switch (this_step) {
      case 0:    // 1100
				GPIO_SetBits(current_stepper->motor_pin_1_bank, current_stepper->motor_pin_1);
				GPIO_SetBits(current_stepper->motor_pin_2_bank, current_stepper->motor_pin_2);
				GPIO_ResetBits(current_stepper->motor_pin_3_bank, current_stepper->motor_pin_3);
				GPIO_ResetBits(current_stepper->motor_pin_4_bank, current_stepper->motor_pin_4);
				break;
      case 1:    // 0110
				GPIO_ResetBits(current_stepper->motor_pin_1_bank, current_stepper->motor_pin_1);
				GPIO_SetBits(current_stepper->motor_pin_2_bank, current_stepper->motor_pin_2);
				GPIO_SetBits(current_stepper->motor_pin_3_bank, current_stepper->motor_pin_3);
				GPIO_ResetBits(current_stepper->motor_pin_4_bank, current_stepper->motor_pin_4);
				break;
			case 2:    //0011
				GPIO_ResetBits(current_stepper->motor_pin_1_bank, current_stepper->motor_pin_1);
				GPIO_ResetBits(current_stepper->motor_pin_2_bank, current_stepper->motor_pin_2);
				GPIO_SetBits(current_stepper->motor_pin_3_bank, current_stepper->motor_pin_3);
				GPIO_SetBits(current_stepper->motor_pin_4_bank, current_stepper->motor_pin_4);
				break;
      case 3:    //1001
      	GPIO_SetBits(current_stepper->motor_pin_1_bank, current_stepper->motor_pin_1);
				GPIO_ResetBits(current_stepper->motor_pin_2_bank, current_stepper->motor_pin_2);
				GPIO_ResetBits(current_stepper->motor_pin_3_bank, current_stepper->motor_pin_3);
				GPIO_SetBits(current_stepper->motor_pin_4_bank, current_stepper->motor_pin_4);
				break;
    } 
  }
  if ((current_stepper->pin_count == 4) && (current_stepper->use_half_step == 1)) {
    switch (this_step) {
      case 0:    // 1000
				GPIO_SetBits(current_stepper->motor_pin_1_bank, current_stepper->motor_pin_1);
				GPIO_ResetBits(current_stepper->motor_pin_2_bank, current_stepper->motor_pin_2);
				GPIO_ResetBits(current_stepper->motor_pin_3_bank, current_stepper->motor_pin_3);
				GPIO_ResetBits(current_stepper->motor_pin_4_bank, current_stepper->motor_pin_4);
				break;
      case 1:    // 1100
				GPIO_SetBits(current_stepper->motor_pin_1_bank, current_stepper->motor_pin_1);
				GPIO_SetBits(current_stepper->motor_pin_2_bank, current_stepper->motor_pin_2);
				GPIO_ResetBits(current_stepper->motor_pin_3_bank, current_stepper->motor_pin_3);
				GPIO_ResetBits(current_stepper->motor_pin_4_bank, current_stepper->motor_pin_4);
				break;
      case 2:    // 0100
				GPIO_ResetBits(current_stepper->motor_pin_1_bank, current_stepper->motor_pin_1);
				GPIO_SetBits(current_stepper->motor_pin_2_bank, current_stepper->motor_pin_2);
				GPIO_ResetBits(current_stepper->motor_pin_3_bank, current_stepper->motor_pin_3);
				GPIO_ResetBits(current_stepper->motor_pin_4_bank, current_stepper->motor_pin_4);
				break;
      case 3:    // 0110
				GPIO_ResetBits(current_stepper->motor_pin_1_bank, current_stepper->motor_pin_1);
				GPIO_SetBits(current_stepper->motor_pin_2_bank, current_stepper->motor_pin_2);
				GPIO_SetBits(current_stepper->motor_pin_3_bank, current_stepper->motor_pin_3);
				GPIO_ResetBits(current_stepper->motor_pin_4_bank, current_stepper->motor_pin_4);
				break;
      case 4:    //0010
				GPIO_ResetBits(current_stepper->motor_pin_1_bank, current_stepper->motor_pin_1);
				GPIO_ResetBits(current_stepper->motor_pin_2_bank, current_stepper->motor_pin_2);
				GPIO_SetBits(current_stepper->motor_pin_3_bank, current_stepper->motor_pin_3);
				GPIO_ResetBits(current_stepper->motor_pin_4_bank, current_stepper->motor_pin_4);
				break;
      case 5:    //0011
				GPIO_ResetBits(current_stepper->motor_pin_1_bank, current_stepper->motor_pin_1);
				GPIO_ResetBits(current_stepper->motor_pin_2_bank, current_stepper->motor_pin_2);
				GPIO_SetBits(current_stepper->motor_pin_3_bank, current_stepper->motor_pin_3);
				GPIO_SetBits(current_stepper->motor_pin_4_bank, current_stepper->motor_pin_4);
				break;
      case 6:    //0001
				GPIO_ResetBits(current_stepper->motor_pin_1_bank, current_stepper->motor_pin_1);
				GPIO_ResetBits(current_stepper->motor_pin_2_bank, current_stepper->motor_pin_2);
				GPIO_ResetBits(current_stepper->motor_pin_3_bank, current_stepper->motor_pin_3);
				GPIO_SetBits(current_stepper->motor_pin_4_bank, current_stepper->motor_pin_4);
				break;
      case 7:    //1001
				GPIO_SetBits(current_stepper->motor_pin_1_bank, current_stepper->motor_pin_1);
				GPIO_ResetBits(current_stepper->motor_pin_2_bank, current_stepper->motor_pin_2);
				GPIO_ResetBits(current_stepper->motor_pin_3_bank, current_stepper->motor_pin_3);
				GPIO_SetBits(current_stepper->motor_pin_4_bank, current_stepper->motor_pin_4);
				break;
    } 
  }
}
